--- a/starstuff-backend/package.json
+++ b/starstuff-backend/package.json
@@ -2,21 +2,28 @@
   "name": "starstuff-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "devDependencies": {
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.1.0",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
+  },
   "dependencies": {
     "@faker-js/faker": "^10.2.0",
     "better-sqlite3": "^12.6.2",
     "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "meilisearch": "^0.55.0",
-    "nodemon": "^3.1.11"
+    "zod": "^4.3.6"
   }
 }
