--- a/starstuff-backend/tsconfig.json
+++ b/starstuff-backend/tsconfig.json
@@ -7,7 +7,9 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noEmit": false,
+    "allowImportingTsExtensions": false,
   },
   "include": [
     "src/**/*"
