--- a/starstuff-frontend/package.json
+++ b/starstuff-frontend/package.json
@@ -16,8 +16,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.39.1",
-		"@sveltejs/adapter-auto": "^7.0.0",
-		"@sveltejs/kit": "^2.49.1",
+		"@sveltejs/adapter-node": "^5.5.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.17",
@@ -37,6 +36,7 @@
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
+		"@sveltejs/kit": "^2.49.1",
 		"zod": "^4.3.6"
 	}
 }
