--- a/starstuff-frontend/.env.example
+++ b/starstuff-frontend/.env.example
@@ -1,2 +1,2 @@
 # Backend API base URL (no trailing slash). Used for search requests.
-BACKEND_API_URL=http://localhost:3000
+PUBLIC_BACKEND_API_URL=http://localhost:3000
